# lltoolkit

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Dockerfile  LLToolkitConfig.hpp.in  README.md  gtest.cmake  main.cpp
cmake/: FindLL-GTest.cmake  gtest.cmake
cmake/gtest/: CMakeLists.txt.in
common/: CMakeLists.txt  Semaphore.hpp  Synchronized.hpp  TypeHelpers.hpp
common/include/common/: Semaphore.hpp  Synchronized.hpp  TypeHelpers.hpp
common/unittest/: LogHelpers.hpp  Test_Synchronized.cpp  Test_TypeHelpers.cpp
data/: CMakeLists.txt  CascadingConfigurationRead.cpp  CascadingConfigurationRead.hpp  ConcreteQueue.hpp  Configuration.cpp  Configuration.hpp  ConfigurationIf.hpp  ConfigurationReadIf.hpp  ConfigurationWriteIf.hpp  Data.hpp  DataIf.hpp  DataModel.h  DataModel.hpp  DataModelIf.hpp  DataModelReadIf.hpp  DataReadIf.hpp  DataWriteIf.hpp  HeterogeneousQueue.hpp  HeterogeneousRingBuffer.hpp  HeterogenousRingBuffer.hpp  Publisher.h  Publisher.hpp  Queue.hpp  SerializableDataModel.hpp  SerializableDataModelIf.hpp  SerializableIf.hpp  SerializerIf.hpp
data/Protobuf/: ProtobufDataModel.hpp  ProtobufSerializer.hpp
data/include/data/: CascadingConfigurationRead.hpp  ConcreteQueue.hpp  Configuration.hpp  ConfigurationIf.hpp  ConfigurationWriteIf.hpp  Data.hpp  DataIf.hpp  DataModel.hpp  DataModelIf.hpp  DataModelReadIf.hpp  HeterogeneousQueue.hpp  HeterogeneousRingBuffer.hpp  Publisher.hpp  SerializableDataModel.hpp  SerializableDataModelIf.hpp  SerializerIf.hpp
data/src/: CascadingConfigurationRead.cpp  Configuration.cpp
data/unittest/: Test.proto  Test_ConcreteQueue.cpp  Test_Configuration.cpp  Test_Data.cpp  Test_DataModel.cpp  Test_HeterogeneousQueue.cpp  Test_HeterogeneousRingBuffer.cpp  Test_HeterogenousRingBuffer.cpp  Test_Queue.cpp
doc/: CMakeLists.txt  conf.py.in  index.rst
logic/: CMakeLists.txt  StateMachine.hpp  StateMachine2.hpp  StateMachine3.hpp
logic/include/logic/: StateMachine.hpp  StateMachine2.hpp
logic/unittest/: Test_StateMachine.cpp  Test_StateMachine2.cpp  Test_StateMachine3.cpp
test_util/: CMakeLists.txt
test_util/include/test_util/: LogHelpers.hpp
